# packageowners

./: pyproject.toml
src/: call_parsers.py  codeowners.py  collect.py  exceptions.py  go_mod.py  package_manager_paths.py  packageowners.py  python_poetry.py  util.py
src/parsers/go_mod/: go.mod  go.sum  go_mod  parse_go_mod.go
tests/: test_codeowners.py  test_go_mod.py  test_poetry.py
tests/fixtures/package_files/: go.mod  pyproject.toml
