[tool.poetry]
name = "packageowners"
version = "0.0.1"
description = "finds installed packages and attempts to set owners"
authors = ["Erin Browning <erinlbrowning@gmail.com>"]
maintainers = ["Erin Browning <erinlbrowning@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pyproject-parser = "^0.7.0"
nested-lookup = "^0.2.25"
